--- a/sample_form.html
+++ b/sample_form.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="content-type" content="text/html" charset="utf-8" />
     <title>Sample Form</title>
     <style type="text/css" media="all">
       input[type="text"] {
